fixed character positioning so it's not stacking vertically. Removed redundant RainOverflow.jsx from testing.

--- a/splmns-animation/src/components/CharacterSpawner.css
+++ b/splmns-animation/src/components/CharacterSpawner.css
@@ -1,3 +1,5 @@
 .character-spawner-div {
-    height: 1000px;
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
