--- a/splmns-animation/src/components/RainOverlay.css
+++ b/splmns-animation/src/components/RainOverlay.css
@@ -1,8 +1,7 @@
-.rain-canvas-front{
+.rain-canvas{
   top: 0;
   left: 0;
   width: 100%;
   height: 1000px;
   pointer-events: none;
-  /* display: block; */
 }
